--- a/aboutkael.html
+++ b/aboutkael.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Story — Lista IA (1080x1730)</title>
+  <title>Feed — Lista IA (1080x1350)</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,55 +30,53 @@
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     }
 
-    /* ===== VISUALIZAÇÃO PARA PRINT (SIMULA MOBILE) ===== */
+    /* ===== PREVIEW MOBILE ===== */
     .preview{
-      width:430px;              /* largura iPhone 14 Pro Max */
+      width:430px;
       max-width:100vw;
-      margin:0 auto;
       padding:16px 0;
       display:grid;
       place-items:start center;
       background:#0b0f1a;
     }
 
-    /* ===== ARTE REAL ===== */
+    /* ===== ARTE FEED ===== */
     .frame{
       width:1080px;
-      height:1730px;
+      height:1350px;
       position:relative;
       overflow:hidden;
       border-radius:34px;
       background:
-        radial-gradient(920px 760px at 18% 16%, rgba(14,107,255,.34), transparent 62%),
-        radial-gradient(860px 740px at 88% 84%, rgba(47,140,255,.26), transparent 62%),
+        radial-gradient(860px 680px at 18% 14%, rgba(14,107,255,.34), transparent 62%),
+        radial-gradient(820px 640px at 88% 86%, rgba(47,140,255,.26), transparent 62%),
         linear-gradient(135deg, #000 0%, #040818 35%, #060e28 62%, #000 100%);
-      transform: scale(0.398); /* 430 / 1080 ≈ 0.398 */
+      transform: scale(0.398);
       transform-origin: top center;
     }
 
     .streak{
       position:absolute;
-      inset:-160px -300px auto -300px;
-      height:620px;
+      inset:-140px -260px auto -260px;
+      height:520px;
       transform:rotate(-18deg);
-      background: radial-gradient(closest-side, rgba(14,107,255,.62), rgba(14,107,255,.10) 55%, transparent 78%);
-      filter:blur(2px);
-      opacity:.95;
+      background: radial-gradient(closest-side, rgba(14,107,255,.6), rgba(14,107,255,.10) 55%, transparent 78%);
+      opacity:.9;
       pointer-events:none;
     }
 
     .streak--2{
       position:absolute;
-      inset:auto -340px -300px -340px;
-      height:760px;
+      inset:auto -300px -260px -300px;
+      height:620px;
       transform:rotate(12deg);
       background: radial-gradient(closest-side, rgba(47,140,255,.48), rgba(47,140,255,.12) 56%, transparent 80%);
-      opacity:.9;
       pointer-events:none;
     }
 
     .noise{
-      position:absolute; inset:0;
+      position:absolute;
+      inset:0;
       background-image:
         linear-gradient(rgba(255,255,255,.04) 1px, transparent 1px),
         linear-gradient(90deg, rgba(255,255,255,.04) 1px, transparent 1px);
@@ -91,28 +89,28 @@
     .wrap{
       position:absolute;
       inset:0;
-      padding:80px 84px 84px;
+      padding:64px 72px 72px;
       display:flex;
       flex-direction:column;
-      gap:36px;
+      gap:28px;
     }
 
-    .top .brand img{
-      width:120px; height:120px;
+    .brand img{
+      width:104px;
+      height:104px;
       object-fit:contain;
       filter:drop-shadow(0 14px 26px rgba(14,107,255,.28));
     }
 
     .hero{
-      flex:1;
       display:flex;
       flex-direction:column;
-      gap:30px;
+      gap:22px;
     }
 
     .kicker{
       font-weight:800;
-      font-size:18px;
+      font-size:16px;
       color:rgba(248,250,252,.75);
       letter-spacing:.18em;
       text-transform:uppercase;
@@ -122,11 +120,11 @@
       margin:0;
       font-family:Poppins,Inter,sans-serif;
       font-weight:800;
-      font-size:98px;
-      line-height:1.02;
-      letter-spacing:-.055em;
+      font-size:82px;
+      line-height:1.03;
+      letter-spacing:-.045em;
       color:var(--text);
-      max-width:1000px;
+      max-width:960px;
     }
 
     .grad{
@@ -137,27 +135,26 @@
     }
 
     .sub{
-      font-size:26px;
-      line-height:1.65;
+      font-size:22px;
+      line-height:1.6;
       color:var(--muted);
-      max-width:980px;
+      max-width:920px;
     }
 
     .card{
-      margin-top:28px;
-      padding:38px 38px;
-      border-radius:28px;
+      margin-top:18px;
+      padding:28px 30px;
+      border-radius:26px;
       background:var(--card);
       border:1px solid var(--stroke);
-      box-shadow:0 36px 90px rgba(0,0,0,.6);
+      box-shadow:0 30px 80px rgba(0,0,0,.55);
       backdrop-filter: blur(12px);
-      width:100%;
     }
 
     .card h2{
-      margin:0 0 22px;
+      margin:0 0 18px;
       font-family:Poppins,Inter,sans-serif;
-      font-size:26px;
+      font-size:22px;
       letter-spacing:-.02em;
       color:#fff;
     }
@@ -165,52 +162,54 @@
     .list{
       display:flex;
       flex-direction:column;
-      gap:22px;
+      gap:16px;
     }
 
     .row{
       display:flex;
       align-items:flex-start;
-      gap:18px;
-      padding:18px 20px;
-      border-radius:20px;
+      gap:16px;
+      padding:14px 16px;
+      border-radius:18px;
       background:rgba(2,6,23,.40);
       border:1px solid rgba(255,255,255,.10);
     }
 
     .toggle{
-      width:56px; height:32px;
+      width:48px;
+      height:28px;
       border-radius:999px;
       border:1px solid rgba(14,107,255,.26);
       background:rgba(14,107,255,.12);
       position:relative;
       flex:0 0 auto;
-      margin-top:4px;
-      box-shadow:0 14px 34px rgba(0,0,0,.4);
+      margin-top:3px;
     }
 
     .toggle:before{
       content:"";
       position:absolute;
-      top:50%; left:6px;
+      top:50%;
+      left:6px;
       transform:translateY(-50%);
-      width:22px; height:22px;
+      width:18px;
+      height:18px;
       border-radius:99px;
-      background:linear-gradient(180deg, rgba(34,211,238,1), rgba(14,107,255,1));
-      box-shadow:0 0 20px rgba(14,107,255,.65);
+      background:linear-gradient(180deg, var(--cyan), var(--blue));
+      box-shadow:0 0 16px rgba(14,107,255,.6);
     }
 
     .row p{
       margin:0;
-      font-size:20px;
+      font-size:18px;
       line-height:1.45;
       color:rgba(248,250,252,.92);
     }
 
     .micro{
-      margin-top:24px;
-      font-size:16px;
-      line-height:1.6;
+      margin-top:18px;
+      font-size:14px;
+      line-height:1.55;
       color:rgba(248,250,252,.65);
     }
   </style>
@@ -224,18 +223,17 @@
       <div class="noise"></div>
 
       <div class="wrap">
-        <div class="top">
-          <div class="brand">
-            <img src="assets/img/tullu.png" alt="Tullu Motion">
-          </div>
+        <div class="brand">
+          <img src="assets/img/tullu.png" alt="Tullu Motion">
         </div>
 
         <div class="hero">
           <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
 
           <h1>
-            Receba grátis <br><span class="grad">toda semana</span><br>
-            como usar IA no seu negócio &nbsp; ➜
+            Receba grátis <br>
+            <span class="grad">toda semana</span><br>
+            como usar IA no seu negócio →
           </h1>
 
           <p class="sub">
@@ -248,14 +246,13 @@
 
             <div class="list">
               <div class="row"><div class="toggle"></div><p><strong>Prompts prontos</strong> para atendimento, vendas e suporte.</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>Playbooks reais</strong> (o que funciona no mundo real, não teoria).</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>Stack recomendada</strong> (ferramentas, integrações e automações).</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>“Tubarões” sem enrolação:</strong> lógica, números e execução.</p></div>
+              <div class="row"><div class="toggle"></div><p><strong>Playbooks reais</strong> (o que funciona no mundo real).</p></div>
+              <div class="row"><div class="toggle"></div><p><strong>Stack recomendada</strong> (ferramentas e automações).</p></div>
+              <div class="row"><div class="toggle"></div><p><strong>Lógica e execução</strong>, sem enrolação.</p></div>
             </div>
 
             <div class="micro">
-              <b>Sem spam.</b> Você sai quando quiser. Conteúdo inspirado nos melhores operadores e mentores,
-              traduzido pro <b>Brasil</b> e aplicado ao dia a dia.
+              <b>Sem spam.</b> Cancele quando quiser. Conteúdo prático, aplicado ao mercado brasileiro.
             </div>
           </div>
         </div>
